# telegram-markdown-render-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  bot.py  config.py  main.py  math_preprocess.py  parse.py  pyproject.toml  render.py
.github/workflows/: docker-ghcr.yml
tests/: test_config.py  test_math_preprocess.py  test_parse.py  test_render_code.py
